--- a/src/lib/i18n/locales/ru.json
+++ b/src/lib/i18n/locales/ru.json
@@ -952,6 +952,12 @@
     "close_notification": "Закрыть уведомление",
     "notifications": "Уведомления"
   },
+  "profile": {
+    "delete_profile": "Удалить профиль",
+    "delete_confirm": "Удалить этот профиль?",
+    "delete_warning": "Все данные этой учётной записи будут удалены. Это действие нельзя отменить.",
+    "delete_failed": "Не удалось удалить профиль"
+  },
   "user": {
     "user_menu": "Меню пользователя",
     "about": "О программе",
