--- a/src/lib/i18n/locales/ko.json
+++ b/src/lib/i18n/locales/ko.json
@@ -947,6 +947,12 @@
     "close_notification": "알림 닫기",
     "notifications": "알림"
   },
+  "profile": {
+    "delete_profile": "프로필 삭제",
+    "delete_confirm": "이 프로필을 삭제하시겠습니까?",
+    "delete_warning": "이 계정의 모든 데이터가 제거됩니다. 이 작업은 취소할 수 없습니다.",
+    "delete_failed": "프로필 삭제 실패"
+  },
   "user": {
     "user_menu": "사용자 메뉴",
     "about": "정보",
