feat: improve the ai lessons more

--- a/src/lib/i18n/locales/ar.json
+++ b/src/lib/i18n/locales/ar.json
@@ -525,6 +525,9 @@
     "correct": "صحيح",
     "incorrect": "خطأ",
     "correct_answer": "الإجابة الصحيحة",
+    "full_marks": "درجة كاملة",
+    "half_marks": "نصف درجة",
+    "model_answer": "الإجابة النموذجية",
     "generating_feedback": "جاري إنشاء الملاحظات...",
     "ai_feedback_unavailable": "تعذر إنشاء ملاحظات الذكاء الاصطناعي.",
     "configure_and_generate": "قم بتكوين موضوعك وانقر على إنشاء اختبار للبدء.",
@@ -539,7 +542,22 @@
     "cerebras_api_key": "مفتاح API Cerebras",
     "paste_api_key": "الصق مفتاح API هنا",
     "save_and_enable": "حفظ وتفعيل اختبارات الذكاء الاصطناعي",
-    "api_key_required": "أدخل مفتاح API."
+    "api_key_required": "أدخل مفتاح API.",
+    "search_assessments": "البحث في التقييمات...",
+    "upcoming_only": "القادمة فقط",
+    "all_assessments": "الكل",
+    "no_assessments_match": "لا توجد تقييمات تطابق الفلاتر.",
+    "year_level": "السنة",
+    "difficulty": "الصعوبة",
+    "any_difficulty": "أي",
+    "year_n": "السنة {{n}}",
+    "all_types": "جميع الأنواع",
+    "select_types": "اختر الأنواع...",
+    "question_types": "أنواع الأسئلة",
+    "type_multiple_choice": "اختيار من متعدد",
+    "type_true_false": "صح/خطأ",
+    "type_short_answer": "إجابة قصيرة",
+    "type_your_answer": "اكتب إجابتك..."
   },
   "messages": {
     "failed_to_load": "Failed to load messages.",
