--- a/src/lib/i18n/locales/de.json
+++ b/src/lib/i18n/locales/de.json
@@ -887,6 +887,9 @@
     "correct": "Richtig",
     "incorrect": "Falsch",
     "correct_answer": "Richtige Antwort",
+    "full_marks": "Volle Punktzahl",
+    "half_marks": "Halbe Punktzahl",
+    "model_answer": "Musterantwort",
     "generating_feedback": "Feedback wird erstellt...",
     "ai_feedback_unavailable": "KI-Feedback konnte nicht erstellt werden.",
     "configure_and_generate": "Konfiguriere dein Thema und klicke auf Quiz erstellen, um zu beginnen.",
@@ -901,7 +904,22 @@
     "cerebras_api_key": "Cerebras API-Schlüssel",
     "paste_api_key": "API-Schlüssel hier einfügen",
     "save_and_enable": "Speichern & KI-Quiz aktivieren",
-    "api_key_required": "Bitte gib deinen API-Schlüssel ein."
+    "api_key_required": "Bitte gib deinen API-Schlüssel ein.",
+    "search_assessments": "Bewertungen suchen...",
+    "upcoming_only": "Nur anstehende",
+    "all_assessments": "Alle",
+    "no_assessments_match": "Keine Bewertungen entsprechen deinen Filtern.",
+    "year_level": "Jahr",
+    "difficulty": "Schwierigkeit",
+    "any_difficulty": "Beliebig",
+    "year_n": "Jahrgang {{n}}",
+    "all_types": "Alle Typen",
+    "select_types": "Typen auswählen...",
+    "question_types": "Fragetypen",
+    "type_multiple_choice": "Multiple Choice",
+    "type_true_false": "Wahr/Falsch",
+    "type_short_answer": "Kurze Antwort",
+    "type_your_answer": "Gib deine Antwort ein..."
   },
   "toast": {
     "close_notification": "Benachrichtigung schließen",
