--- a/src/lib/i18n/locales/en.json
+++ b/src/lib/i18n/locales/en.json
@@ -544,6 +544,9 @@
     "correct": "Correct",
     "incorrect": "Incorrect",
     "correct_answer": "Correct answer",
+    "full_marks": "Full marks",
+    "half_marks": "Half marks",
+    "model_answer": "Model answer",
     "generating_feedback": "Generating feedback...",
     "ai_feedback_unavailable": "AI feedback could not be generated.",
     "configure_and_generate": "Configure your topic and click Generate Quiz to get started.",
@@ -558,7 +561,22 @@
     "cerebras_api_key": "Cerebras API Key",
     "paste_api_key": "Paste your API key here",
     "save_and_enable": "Save & Enable AI Quizzes",
-    "api_key_required": "Please enter your API key."
+    "api_key_required": "Please enter your API key.",
+    "search_assessments": "Search assessments...",
+    "upcoming_only": "Upcoming only",
+    "all_assessments": "All",
+    "no_assessments_match": "No assessments match your filters.",
+    "year_level": "Year",
+    "difficulty": "Difficulty",
+    "any_difficulty": "Any",
+    "year_n": "Year {{n}}",
+    "all_types": "All types",
+    "select_types": "Select types...",
+    "question_types": "Question types",
+    "type_multiple_choice": "Multiple choice",
+    "type_true_false": "True/False",
+    "type_short_answer": "Short answer",
+    "type_your_answer": "Type your answer..."
   },
   "rss_feeds": {
     "title": "RSS Feeds",
