--- a/src/lib/i18n/locales/es.json
+++ b/src/lib/i18n/locales/es.json
@@ -887,6 +887,9 @@
     "correct": "Correcto",
     "incorrect": "Incorrecto",
     "correct_answer": "Respuesta correcta",
+    "full_marks": "Nota completa",
+    "half_marks": "Media nota",
+    "model_answer": "Respuesta modelo",
     "generating_feedback": "Generando retroalimentación...",
     "ai_feedback_unavailable": "No se pudo generar la retroalimentación de IA.",
     "configure_and_generate": "Configura tu tema y haz clic en Generar cuestionario para comenzar.",
@@ -901,7 +904,22 @@
     "cerebras_api_key": "Clave API de Cerebras",
     "paste_api_key": "Pega tu clave API aquí",
     "save_and_enable": "Guardar y activar cuestionarios IA",
-    "api_key_required": "Introduce tu clave API."
+    "api_key_required": "Introduce tu clave API.",
+    "search_assessments": "Buscar evaluaciones...",
+    "upcoming_only": "Solo próximas",
+    "all_assessments": "Todas",
+    "no_assessments_match": "Ninguna evaluación coincide con tus filtros.",
+    "year_level": "Año",
+    "difficulty": "Dificultad",
+    "any_difficulty": "Cualquiera",
+    "year_n": "Año {{n}}",
+    "all_types": "Todos los tipos",
+    "select_types": "Seleccionar tipos...",
+    "question_types": "Tipos de pregunta",
+    "type_multiple_choice": "Opción múltiple",
+    "type_true_false": "Verdadero/Falso",
+    "type_short_answer": "Respuesta corta",
+    "type_your_answer": "Escribe tu respuesta..."
   },
   "toast": {
     "close_notification": "Cerrar notificación",
