--- a/src/lib/i18n/locales/it.json
+++ b/src/lib/i18n/locales/it.json
@@ -530,6 +530,9 @@
     "correct": "Corretto",
     "incorrect": "Incorretto",
     "correct_answer": "Risposta corretta",
+    "full_marks": "Pieno punteggio",
+    "half_marks": "Metà punteggio",
+    "model_answer": "Risposta modello",
     "generating_feedback": "Generazione feedback...",
     "ai_feedback_unavailable": "Impossibile generare il feedback IA.",
     "configure_and_generate": "Configura il tuo argomento e clicca su Genera quiz per iniziare.",
@@ -544,7 +547,22 @@
     "cerebras_api_key": "Chiave API Cerebras",
     "paste_api_key": "Incolla la tua chiave API qui",
     "save_and_enable": "Salva e abilita quiz IA",
-    "api_key_required": "Inserisci la tua chiave API."
+    "api_key_required": "Inserisci la tua chiave API.",
+    "search_assessments": "Cerca valutazioni...",
+    "upcoming_only": "Solo imminenti",
+    "all_assessments": "Tutte",
+    "no_assessments_match": "Nessuna valutazione corrisponde ai filtri.",
+    "year_level": "Anno",
+    "difficulty": "Difficoltà",
+    "any_difficulty": "Qualsiasi",
+    "year_n": "Anno {{n}}",
+    "all_types": "Tutti i tipi",
+    "select_types": "Seleziona tipi...",
+    "question_types": "Tipi di domande",
+    "type_multiple_choice": "Scelta multipla",
+    "type_true_false": "Vero/Falso",
+    "type_short_answer": "Risposta breve",
+    "type_your_answer": "Scrivi la tua risposta..."
   },
   "messages": {
     "failed_to_load": "Impossibile caricare i messaggi.",
