--- a/src/lib/i18n/locales/ja.json
+++ b/src/lib/i18n/locales/ja.json
@@ -887,6 +887,9 @@
     "correct": "正解",
     "incorrect": "不正解",
     "correct_answer": "正解",
+    "full_marks": "満点",
+    "half_marks": "部分点",
+    "model_answer": "模範解答",
     "generating_feedback": "フィードバックを生成中...",
     "ai_feedback_unavailable": "AIフィードバックを生成できませんでした。",
     "configure_and_generate": "トピックを設定して「クイズを生成」をクリックして開始してください。",
@@ -901,7 +904,22 @@
     "cerebras_api_key": "Cerebras APIキー",
     "paste_api_key": "APIキーをここに貼り付け",
     "save_and_enable": "保存してAIクイズを有効にする",
-    "api_key_required": "APIキーを入力してください。"
+    "api_key_required": "APIキーを入力してください。",
+    "search_assessments": "評価を検索...",
+    "upcoming_only": "今後のみ",
+    "all_assessments": "すべて",
+    "no_assessments_match": "フィルターに一致する評価がありません。",
+    "year_level": "年",
+    "difficulty": "難易度",
+    "any_difficulty": "任意",
+    "year_n": "{{n}}年",
+    "all_types": "すべてのタイプ",
+    "select_types": "タイプを選択...",
+    "question_types": "問題タイプ",
+    "type_multiple_choice": "選択式",
+    "type_true_false": "正誤",
+    "type_short_answer": "記述式",
+    "type_your_answer": "答えを入力..."
   },
   "toast": {
     "close_notification": "通知を閉じる",
