--- a/src/lib/i18n/locales/ko.json
+++ b/src/lib/i18n/locales/ko.json
@@ -525,6 +525,9 @@
     "correct": "정답",
     "incorrect": "오답",
     "correct_answer": "정답",
+    "full_marks": "만점",
+    "half_marks": "부분 점수",
+    "model_answer": "모범 답안",
     "generating_feedback": "피드백 생성 중...",
     "ai_feedback_unavailable": "AI 피드백을 생성할 수 없습니다.",
     "configure_and_generate": "주제를 설정하고 퀴즈 생성을 클릭하여 시작하세요.",
@@ -539,7 +542,22 @@
     "cerebras_api_key": "Cerebras API 키",
     "paste_api_key": "API 키를 여기에 붙여넣기",
     "save_and_enable": "저장 및 AI 퀴즈 활성화",
-    "api_key_required": "API 키를 입력하세요."
+    "api_key_required": "API 키를 입력하세요.",
+    "search_assessments": "평가 검색...",
+    "upcoming_only": "예정된 것만",
+    "all_assessments": "전체",
+    "no_assessments_match": "필터와 일치하는 평가가 없습니다.",
+    "year_level": "연도",
+    "difficulty": "난이도",
+    "any_difficulty": "임의",
+    "year_n": "{{n}}학년",
+    "all_types": "모든 유형",
+    "select_types": "유형 선택...",
+    "question_types": "문제 유형",
+    "type_multiple_choice": "객관식",
+    "type_true_false": "참/거짓",
+    "type_short_answer": "단답형",
+    "type_your_answer": "답을 입력하세요..."
   },
   "messages": {
     "failed_to_load": "Failed to load messages.",
