--- a/src/lib/i18n/locales/nl.json
+++ b/src/lib/i18n/locales/nl.json
@@ -525,6 +525,9 @@
     "correct": "Correct",
     "incorrect": "Incorrect",
     "correct_answer": "Juiste antwoord",
+    "full_marks": "Volle punten",
+    "half_marks": "Halve punten",
+    "model_answer": "Modelantwoord",
     "generating_feedback": "Feedback genereren...",
     "ai_feedback_unavailable": "AI-feedback kon niet worden gegenereerd.",
     "configure_and_generate": "Configureer je onderwerp en klik op Quiz genereren om te beginnen.",
@@ -539,7 +542,22 @@
     "cerebras_api_key": "Cerebras API-sleutel",
     "paste_api_key": "Plak je API-sleutel hier",
     "save_and_enable": "Opslaan en AI-quizzen inschakelen",
-    "api_key_required": "Voer je API-sleutel in."
+    "api_key_required": "Voer je API-sleutel in.",
+    "search_assessments": "Zoek beoordelingen...",
+    "upcoming_only": "Alleen komende",
+    "all_assessments": "Alle",
+    "no_assessments_match": "Geen beoordelingen komen overeen met je filters.",
+    "year_level": "Jaar",
+    "difficulty": "Moeilijkheid",
+    "any_difficulty": "Willekeurig",
+    "year_n": "Jaar {{n}}",
+    "all_types": "Alle typen",
+    "select_types": "Selecteer typen...",
+    "question_types": "Vraagtypes",
+    "type_multiple_choice": "Meerkeuze",
+    "type_true_false": "Waar/Onwaar",
+    "type_short_answer": "Kort antwoord",
+    "type_your_answer": "Typ je antwoord..."
   },
   "messages": {
     "failed_to_load": "Failed to load messages.",
