--- a/src/lib/i18n/locales/pl.json
+++ b/src/lib/i18n/locales/pl.json
@@ -525,6 +525,9 @@
     "correct": "Poprawnie",
     "incorrect": "Niepoprawnie",
     "correct_answer": "Poprawna odpowiedź",
+    "full_marks": "Pełna punktacja",
+    "half_marks": "Połowa punktów",
+    "model_answer": "Odpowiedź wzorcowa",
     "generating_feedback": "Generowanie feedbacku...",
     "ai_feedback_unavailable": "Nie udało się wygenerować feedbacku AI.",
     "configure_and_generate": "Skonfiguruj temat i kliknij Generuj quiz, aby rozpocząć.",
@@ -539,7 +542,22 @@
     "cerebras_api_key": "Klucz API Cerebras",
     "paste_api_key": "Wklej swój klucz API tutaj",
     "save_and_enable": "Zapisz i włącz quizy AI",
-    "api_key_required": "Wprowadź swój klucz API."
+    "api_key_required": "Wprowadź swój klucz API.",
+    "search_assessments": "Szukaj ocen...",
+    "upcoming_only": "Tylko nadchodzące",
+    "all_assessments": "Wszystkie",
+    "no_assessments_match": "Żadna ocena nie pasuje do filtrów.",
+    "year_level": "Rok",
+    "difficulty": "Trudność",
+    "any_difficulty": "Dowolna",
+    "year_n": "Rok {{n}}",
+    "all_types": "Wszystkie typy",
+    "select_types": "Wybierz typy...",
+    "question_types": "Typy pytań",
+    "type_multiple_choice": "Wielokrotny wybór",
+    "type_true_false": "Prawda/Fałsz",
+    "type_short_answer": "Krótka odpowiedź",
+    "type_your_answer": "Wpisz swoją odpowiedź..."
   },
   "messages": {
     "failed_to_load": "Failed to load messages.",
