--- a/src/lib/i18n/locales/pt.json
+++ b/src/lib/i18n/locales/pt.json
@@ -530,6 +530,9 @@
     "correct": "Correto",
     "incorrect": "Incorreto",
     "correct_answer": "Resposta correta",
+    "full_marks": "Nota completa",
+    "half_marks": "Meia nota",
+    "model_answer": "Resposta modelo",
     "generating_feedback": "Gerando feedback...",
     "ai_feedback_unavailable": "Não foi possível gerar o feedback da IA.",
     "configure_and_generate": "Configure seu tópico e clique em Gerar questionário para começar.",
@@ -544,7 +547,22 @@
     "cerebras_api_key": "Chave API Cerebras",
     "paste_api_key": "Cole sua chave API aqui",
     "save_and_enable": "Salvar e ativar questionários IA",
-    "api_key_required": "Digite sua chave API."
+    "api_key_required": "Digite sua chave API.",
+    "search_assessments": "Pesquisar avaliações...",
+    "upcoming_only": "Apenas próximas",
+    "all_assessments": "Todas",
+    "no_assessments_match": "Nenhuma avaliação corresponde aos filtros.",
+    "year_level": "Ano",
+    "difficulty": "Dificuldade",
+    "any_difficulty": "Qualquer",
+    "year_n": "Ano {{n}}",
+    "all_types": "Todos os tipos",
+    "select_types": "Selecionar tipos...",
+    "question_types": "Tipos de pergunta",
+    "type_multiple_choice": "Múltipla escolha",
+    "type_true_false": "Verdadeiro/Falso",
+    "type_short_answer": "Resposta curta",
+    "type_your_answer": "Digite sua resposta..."
   },
   "messages": {
     "failed_to_load": "Falha ao carregar mensagens.",
