--- a/src/lib/i18n/locales/ru.json
+++ b/src/lib/i18n/locales/ru.json
@@ -530,6 +530,9 @@
     "correct": "Правильно",
     "incorrect": "Неправильно",
     "correct_answer": "Правильный ответ",
+    "full_marks": "Полный балл",
+    "half_marks": "Полбалла",
+    "model_answer": "Эталонный ответ",
     "generating_feedback": "Генерация обратной связи...",
     "ai_feedback_unavailable": "Не удалось сгенерировать обратную связь ИИ.",
     "configure_and_generate": "Настройте тему и нажмите «Создать викторину», чтобы начать.",
@@ -544,7 +547,22 @@
     "cerebras_api_key": "Ключ API Cerebras",
     "paste_api_key": "Вставьте ключ API сюда",
     "save_and_enable": "Сохранить и включить ИИ-викторины",
-    "api_key_required": "Введите ключ API."
+    "api_key_required": "Введите ключ API.",
+    "search_assessments": "Поиск оценок...",
+    "upcoming_only": "Только предстоящие",
+    "all_assessments": "Все",
+    "no_assessments_match": "Нет оценок, соответствующих фильтрам.",
+    "year_level": "Год",
+    "difficulty": "Сложность",
+    "any_difficulty": "Любая",
+    "year_n": "Год {{n}}",
+    "all_types": "Все типы",
+    "select_types": "Выберите типы...",
+    "question_types": "Типы вопросов",
+    "type_multiple_choice": "Множественный выбор",
+    "type_true_false": "Верно/Неверно",
+    "type_short_answer": "Краткий ответ",
+    "type_your_answer": "Введите ответ..."
   },
   "messages": {
     "failed_to_load": "Не удалось загрузить сообщения.",
