--- a/src/lib/i18n/locales/tr.json
+++ b/src/lib/i18n/locales/tr.json
@@ -525,6 +525,9 @@
     "correct": "Doğru",
     "incorrect": "Yanlış",
     "correct_answer": "Doğru cevap",
+    "full_marks": "Tam puan",
+    "half_marks": "Yarım puan",
+    "model_answer": "Örnek cevap",
     "generating_feedback": "Geri bildirim oluşturuluyor...",
     "ai_feedback_unavailable": "Yapay zeka geri bildirimi oluşturulamadı.",
     "configure_and_generate": "Konunuzu yapılandırın ve başlamak için Sınav oluştur'a tıklayın.",
@@ -539,7 +542,22 @@
     "cerebras_api_key": "Cerebras API Anahtarı",
     "paste_api_key": "API anahtarınızı buraya yapıştırın",
     "save_and_enable": "Kaydet ve Yapay Zeka Sınavlarını Etkinleştir",
-    "api_key_required": "Lütfen API anahtarınızı girin."
+    "api_key_required": "Lütfen API anahtarınızı girin.",
+    "search_assessments": "Değerlendirmeleri ara...",
+    "upcoming_only": "Sadece yaklaşanlar",
+    "all_assessments": "Tümü",
+    "no_assessments_match": "Filtrelerinize uyan değerlendirme yok.",
+    "year_level": "Yıl",
+    "difficulty": "Zorluk",
+    "any_difficulty": "Herhangi",
+    "year_n": "Yıl {{n}}",
+    "all_types": "Tüm türler",
+    "select_types": "Tür seçin...",
+    "question_types": "Soru türleri",
+    "type_multiple_choice": "Çoktan seçmeli",
+    "type_true_false": "Doğru/Yanlış",
+    "type_short_answer": "Kısa cevap",
+    "type_your_answer": "Cevabınızı yazın..."
   },
   "messages": {
     "failed_to_load": "Failed to load messages.",
