--- a/src/lib/i18n/locales/zh.json
+++ b/src/lib/i18n/locales/zh.json
@@ -887,6 +887,9 @@
     "correct": "正确",
     "incorrect": "错误",
     "correct_answer": "正确答案",
+    "full_marks": "满分",
+    "half_marks": "半分",
+    "model_answer": "参考答案",
     "generating_feedback": "正在生成反馈...",
     "ai_feedback_unavailable": "无法生成 AI 反馈。",
     "configure_and_generate": "配置你的主题并点击生成测验开始。",
@@ -901,7 +904,22 @@
     "cerebras_api_key": "Cerebras API 密钥",
     "paste_api_key": "在此粘贴你的 API 密钥",
     "save_and_enable": "保存并启用 AI 测验",
-    "api_key_required": "请输入你的 API 密钥。"
+    "api_key_required": "请输入你的 API 密钥。",
+    "search_assessments": "搜索评估...",
+    "upcoming_only": "仅即将到来",
+    "all_assessments": "全部",
+    "no_assessments_match": "没有评估符合你的筛选条件。",
+    "year_level": "年份",
+    "difficulty": "难度",
+    "any_difficulty": "任意",
+    "year_n": "{{n}}年级",
+    "all_types": "全部类型",
+    "select_types": "选择类型...",
+    "question_types": "题型",
+    "type_multiple_choice": "选择题",
+    "type_true_false": "对/错",
+    "type_short_answer": "简答题",
+    "type_your_answer": "输入你的答案..."
   },
   "toast": {
     "close_notification": "关闭通知",
