--- a/src/lib/i18n/locales/en-pirate.json
+++ b/src/lib/i18n/locales/en-pirate.json
@@ -893,6 +893,9 @@
     "correct": "Correct",
     "incorrect": "Incorrect",
     "correct_answer": "Correct answer",
+    "full_marks": "Full marks",
+    "half_marks": "Half marks",
+    "model_answer": "Model answer",
     "generating_feedback": "Generatin' feedback...",
     "ai_feedback_unavailable": "AI feedback could not be generated.",
     "configure_and_generate": "Configure yer topic and click Generate Quiz to get started.",
@@ -907,7 +910,22 @@
     "cerebras_api_key": "Cerebras API Key",
     "paste_api_key": "Paste yer API key here",
     "save_and_enable": "Save & Enable AI Quizzes",
-    "api_key_required": "Please enter yer API key."
+    "api_key_required": "Please enter yer API key.",
+    "search_assessments": "Search fer assessments...",
+    "upcoming_only": "Upcomin' only",
+    "all_assessments": "All",
+    "no_assessments_match": "No assessments match yer filters.",
+    "year_level": "Year",
+    "difficulty": "Difficulty",
+    "any_difficulty": "Any",
+    "year_n": "Year {{n}}",
+    "all_types": "All types",
+    "select_types": "Select types...",
+    "question_types": "Question types",
+    "type_multiple_choice": "Multiple choice",
+    "type_true_false": "True/False",
+    "type_short_answer": "Short answer",
+    "type_your_answer": "Type yer answer..."
   },
   "toast": {
     "close_notification": "Close notification",
