--- a/src/lib/i18n/locales/fr.json
+++ b/src/lib/i18n/locales/fr.json
@@ -890,6 +890,9 @@
     "correct": "Correct",
     "incorrect": "Incorrect",
     "correct_answer": "Bonne réponse",
+    "full_marks": "Note complète",
+    "half_marks": "Demi-note",
+    "model_answer": "Réponse modèle",
     "generating_feedback": "Génération du retour...",
     "ai_feedback_unavailable": "Impossible de générer le retour IA.",
     "configure_and_generate": "Configurez votre sujet et cliquez sur Générer un quiz pour commencer.",
@@ -904,7 +907,22 @@
     "cerebras_api_key": "Clé API Cerebras",
     "paste_api_key": "Collez votre clé API ici",
     "save_and_enable": "Enregistrer et activer les quiz IA",
-    "api_key_required": "Veuillez entrer votre clé API."
+    "api_key_required": "Veuillez entrer votre clé API.",
+    "search_assessments": "Rechercher des évaluations...",
+    "upcoming_only": "À venir uniquement",
+    "all_assessments": "Toutes",
+    "no_assessments_match": "Aucune évaluation ne correspond à vos filtres.",
+    "year_level": "Année",
+    "difficulty": "Difficulté",
+    "any_difficulty": "Toute",
+    "year_n": "Année {{n}}",
+    "all_types": "Tous les types",
+    "select_types": "Sélectionner les types...",
+    "question_types": "Types de questions",
+    "type_multiple_choice": "Choix multiples",
+    "type_true_false": "Vrai/Faux",
+    "type_short_answer": "Réponse courte",
+    "type_your_answer": "Tapez votre réponse..."
   },
   "toast": {
     "close_notification": "Fermer la notification",
